realtime favourites, notes deletes plus scrollbars fixed

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -29,6 +29,16 @@ $sixthColor: #dadbd3;
 //   background: #ff0000;
 // }
 
+// #hideScroll::-webkit-scrollbar {
+//   display: none;
+// }
+
+.BoardClass {
+  margin-bottom: 15% !important;
+}
+.FullHeight {
+  height: 100% !important;
+}
 // react-search-input
 
 .search-input {
